# FanController

./: CMakeLists.txt  README.md  build.sh  run.sh  update.sh
files/: README.md  fancontroller.service
include/: config.hpp  controller.hpp  utility.hpp
source/: config.cpp  controller.cpp  main.cpp  utility.cpp
